--- a/package.json
+++ b/package.json
@@ -9,16 +9,35 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
-    "next": "15.0.1"
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@reown/walletkit": "^1.1.1",
+    "@tanstack/react-query": "^5.59.16",
+    "@walletconnect/core": "^2.17.1",
+    "@walletconnect/utils": "^2.17.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
+    "ethers": "^6.13.4",
+    "ipfs-http-client": "^60.0.1",
+    "lucide-react": "^0.453.0",
+    "next": "15.0.1",
+    "pinata": "^1.7.1",
+    "pinata-web3": "^0.5.2",
+    "pino-pretty": "^11.3.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
+    "viem": "^2.21.35",
+    "wagmi": "^2.12.25"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
