--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "viem": "^2.21.35",
-    "wagmi": "^2.12.25"
+    "wagmi": "^2.12.25",
+    "web3": "^4.14.0"
   },
   "devDependencies": {
     "@types/node": "^20",
