--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^5.1.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
-    "@reown/walletkit": "^1.1.1",
+    "@reown/walletkit": "^1.1.0",
     "@tanstack/react-query": "^5.59.16",
-    "@walletconnect/core": "^2.17.1",
-    "@walletconnect/utils": "^2.17.1",
+    "@walletconnect/core": "^2.17.0",
+    "@walletconnect/utils": "^2.17.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "ethers": "^6.13.4",
+    "ganache-cli": "^6.12.2",
+    "hardhat": "^2.22.15",
     "ipfs-http-client": "^60.0.1",
     "lucide-react": "^0.453.0",
     "next": "15.0.1",
@@ -34,6 +37,7 @@
     "web3": "^4.14.0"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
