--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "ethers": "^6.13.4",
+    "framer-motion": "^11.11.11",
     "ipfs-http-client": "^60.0.1",
     "lucide-react": "^0.453.0",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "15.0.1",
     "node-fetch": "^3.3.2",
     "pinata": "^1.7.1",
